// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React Code Generator > Basic Components > should generate Button component 1`] = `
"import { Button } from "@/components/ui/button";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button variant="primary">Click me</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Basic Components > should generate Card component 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Card>
          <CardContent>Card content</CardContent>
        </Card>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Basic Components > should generate Input component 1`] = `
"import { Input } from "@/components/ui/input";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Input id="username" placeholder="Enter username" />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate multi-node conditional with Fragment 1`] = `
"import { Button } from "@/components/ui/button";
import { Badge } from "@/components/ui/badge";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isLoggedIn && (
          <>
            <Button>Logout</Button>
            <Badge>Premium</Badge>
          </>
        )}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate single-node conditional without Fragment 1`] = `
"import { Badge } from "@/components/ui/badge";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isActive && <Badge>Active</Badge>}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate ternary with single nodes without Fragment 1`] = `
"import { Badge } from "@/components/ui/badge";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isPremium ? (
          <Badge variant="success">Premium</Badge>
        ) : (
          <Badge variant="default">Free</Badge>
        )}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Loop Rendering > should generate loop with React.Fragment 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {users.map((user) => (
          <React.Fragment key={user.id || Math.random()}>
            <Card>
              <CardContent>User</CardContent>
            </Card>
          </React.Fragment>
        ))}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Multiple Components > should generate form with multiple inputs 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
import { Input } from "@/components/ui/input";
import { Button } from "@/components/ui/button";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Card>
          <CardContent>User Registration</CardContent>
        </Card>
        <Input id="name" placeholder="Name" />
        <Input id="email" placeholder="Email" type="email" />
        <Button variant="primary">Submit</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Nested Control Flow > should handle loop inside conditional 1`] = `
"import { Badge } from "@/components/ui/badge";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {hasItems &&
          items.map((item) => (
            <React.Fragment key={item.id || Math.random()}>
              <Badge>Item</Badge>
            </React.Fragment>
          ))}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Nested Control Flow > should handle nested conditional in loop 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
import { Badge } from "@/components/ui/badge";
export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {items.map((item) => (
          <React.Fragment key={item.id || Math.random()}>
            <Card>
              <CardContent>Item</CardContent>
            </Card>
            {item.isActive && <Badge>Active</Badge>}
          </React.Fragment>
        ))}
      </div>
    </>
  );
}
"
`;
